first level slide layout

--- a/index.html
+++ b/index.html
@@ -50,23 +50,50 @@ It's probably a good example of how difficult it is for me to separate content w
 <div id="impress">
     
     <!-- each slide must be a div with class step,  must have some co-ordinates -->
-    <div id="title" class="step" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
-        <h1>Title Slide</h1> 
+    <div id="title" class="step slide" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+        <h1>A method for cleaning 19th century text with examples from Transactions of the Royal Irish Academy 1800&mdash;1899</h1> 
+        <p>Emma Clarke</p>
         <p><i class="fa fa-twitter fa-large"></i>@twitter</p>
+        <p>Alexander O&apos;Connor {Alex.OConnor@scss.tcd.ie}</p>
+        <p><i class="fa fa-twitter fa-large"></i><a href="https://www.twitter.com/uberalex/">@uberalex</a></p>
+        <p>ADAPT Centre, School of Computer Science  &amp; Statistics, Trinity College Dublin, Ireland</p>
+
         <div class="notes">
             <!--speaker notes-->
             <p>Example Speaker Notes.</p>
         </div>
     </div>
-    <div id="slide1" class="step" data-x="1200" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
-        <h1>Slide one</h1> 
+    <div id="RIA" class="step" data-x="1200" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+        <h1>Introduction to the RIA</h1> 
+        <div class="notes">
+            <!--speaker notes-->
+            <p>Example Speaker Notes.</p>
+        </div>
+    </div>
+    <div id="TopicModelling" class="step" data-x="1200" data-y="1200" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+        <h1>Introduction to the RIA</h1> 
+        <div class="notes">
+            <!--speaker notes-->
+            <p>Example Speaker Notes.</p>
+        </div>
+    </div>
+    <div id="Results" class="step" data-x="1200" data-y="2400" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+        <h1>Results</h1> 
+        <div class="notes">
+            <!--speaker notes-->
+            <p>Example Speaker Notes.</p>
+        </div>
+    </div>
+     <div id="Results" class="step" data-x="0" data-y="3600" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+        <h1>Conclusions</h1> 
         <div class="notes">
             <!--speaker notes-->
             <p>Example Speaker Notes.</p>
         </div>
     </div>
 
-    <div id="d3slide" class="step" data-x="0" data-y="1200" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+
+    <div id="d3slide" class="step" data-x="-1200" data-y="1200" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
     </div>
 
 
