--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ It's probably a good example of how difficult it is for me to separate content w
     
     <!-- each slide must be a div with class step,  must have some co-ordinates -->
     <div id="title" class="step slide" data-x="0" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
-        <h1>A method for cleaning 19th century text with examples from Transactions of the Royal Irish Academy 1800&mdash;1899</h1> 
+        <h1>A method for cleaning XIX<sup>th</sup> century text with examples from Transactions of the Royal Irish Academy 1800&mdash;1899</h1> 
         <p>Emma Clarke</p>
         <p><i class="fa fa-twitter fa-large"></i><a href="https://www.twitter.com/Clarke__Emma">@Clarke__Emma</a></p>
         <p>Alexander O&apos;Connor {Alex.OConnor@scss.tcd.ie}</p>
