code and example

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ It's probably a good example of how difficult it is for me to separate content w
             <p>Example Speaker Notes.</p>
         </div>
     </div>
+<!-- content slides start here -->
     <div id="RIA" class="step" data-x="1200" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
         <h1>Introduction to the RIA</h1> 
         <div class="notes">
@@ -77,14 +78,14 @@ It's probably a good example of how difficult it is for me to separate content w
             <p>Example Speaker Notes.</p>
         </div>
     </div>
-    <div id="Results" class="step" data-x="1200" data-y="2400" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+    <div id="ResultsFindings" class="step" data-x="1200" data-y="2400" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
         <h1>Results</h1> 
         <div class="notes">
             <!--speaker notes-->
             <p>Example Speaker Notes.</p>
         </div>
     </div>
-     <div id="Results" class="step" data-x="0" data-y="3600" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
+    <div id="ResultsProcess" class="step" data-x="0" data-y="3600" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0" data-scale="1">
         <h1>Conclusions</h1> 
         <div class="notes">
             <!--speaker notes-->
